--- a/src/index.html
+++ b/src/index.html
@@ -24,41 +24,97 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="portfolio-collapse-menu">
         <ul class="nav navbar-nav">
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
     </div>
     <!-- /.container-fluid -->
   </nav>
+  <div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
+
+
+        <div class = "marketing">
+        <div class="container"></div>
+          <div class="row">
+              <div class="col-md-4">
+                  <span class="glyphicon glyphicon-heart"></span>
+                  <h2>CSS</h2>
+                  <p>CSSS melts my heart</p>
+              </div>
+              <div class="col-md-4">
+                  <span class="glyphicon glyphicon-music"></span>
+                  <h2>HTML</h2>
+                  <p>HTML melts my heart</p>
+              </div>
+              <div class="col-md-4">
+                  <span class="glyphicon glyphicon-camera"></span>
+                  <h2>JavaScript</h2>
+                  <p>Javascript is aswesome and I feel powerful when I use it.</p>
+              </div>
+          </div>
+      </div>
+      <div class="footer">
+        <div class="container">
+            <h3>
+              <title>Get in touch</title>
+              <p>email at vignatif@gmail.com</p>
+            </h3>
+        </div>
+      </div>
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#portfolio-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#portfolio-carousel" data-slide-to="1"></li>
+    <li data-target="#portfolio-carousel" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>What I do /h1>
+          <p>On a day-to-day I use CSS, HTML, Javascript.</p>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>My Passion</h1>
+          <p>My passion is to build amazing products that people love using .</p>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>Who I am</h1>
+          <p>Vigna Dara.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <a class="left carousel-control" href="#portfolio-carousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#portfolio-carousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
   <!--
     Previous project placeholder begins
   -->
+
+
+
+
+
   <div class="header">
-    <h1>Morgan McCircuit</h1>
+    <h1>Vigna Dara</h1>
     <h2>I write code</h2>
-  </div>
-
-  <div class="tagline">
-    <h3>Who I am</h3>
-    <p>Hi, my name is Morgan and I love to write code that is efficient.</p>
-  </div>
-
-
-  <div class="skills">
-    <h3>What I do</h3>
-    <p>Here are some of the languages I use on a day-to-day.</p>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-    </ul>
-  </div>
-
-  <div class="contact">
-    <h3>Get in touch</h3>
-    <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
   </div>
   <!--
     Previous project placeholder ends
