--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
     <div class="item active">
       <div class="container">
         <div class="carousel-caption">
-          <h1>What I do /h1>
+          <h1>What I do </h1>
           <p>On a day-to-day I use CSS, HTML, Javascript.</p>
         </div>
       </div>
@@ -107,15 +107,6 @@
   <!--
     Previous project placeholder begins
   -->
-
-
-
-
-
-  <div class="header">
-    <h1>Vigna Dara</h1>
-    <h2>I write code</h2>
-  </div>
   <!--
     Previous project placeholder ends
     (unused pieces will be deleted at the last task)
