--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 
 
         <div class = "marketing">
-        <div class="container"></div>
+        <div class="container">
           <div class="row">
               <div class="col-md-4">
                   <span class="glyphicon glyphicon-heart"></span>
@@ -54,6 +54,7 @@
                   <p>Javascript is aswesome and I feel powerful when I use it.</p>
               </div>
           </div>
+      </div>
       </div>
       <div class="footer">
         <div class="container">
@@ -73,7 +74,7 @@
     <div class="item active">
       <div class="container">
         <div class="carousel-caption">
-          <h1>What I do /h1>
+          <h1>What I do </h1>
           <p>On a day-to-day I use CSS, HTML, Javascript.</p>
         </div>
       </div>
